# Graphos

./: .gitignore  CHANGELOG.md  LICENSE  README.md  docker-compose.yml  graphos.cabal  graphos.yaml  shell.nix
.github/workflows/: haskell.yml  release.yml
.tmp/sessions/2026-04-17-context-optimizer/: context.md
.tmp/sessions/2026-04-20-graphos-refactor/: context.md
.tmp/tasks/context-optimizer/: subtask_01.json  subtask_02.json  subtask_03.json  subtask_04.json  subtask_05.json  subtask_06.json  subtask_07.json  subtask_08.json  task.json
.tmp/tasks/graphos-refactor/: subtask_01.json  subtask_02.json  subtask_03.json  subtask_04.json  subtask_05.json  subtask_06.json  subtask_07.json  subtask_08.json  subtask_09.json  subtask_10.json  subtask_11.json  subtask_12.json  subtask_13.json  subtask_14.json  subtask_15.json  task.json
app/: Main.hs
docs/: brainstorm-context-optimization.md
docs/proposals/: modular-refactoring.md
example/ts-lsp-test/: graphos.yaml  package-lock.json  package.json  tsconfig.json
example/ts-lsp-test/src/: db.ts  index.ts  service.ts  types.ts  validate.ts
example/ts-lsp-test/src/utils/: format.ts  logger.ts
src/Graphos/: Prelude.hs
src/Graphos/Domain/: Analysis.hs  Community.hs  Config.hs  Context.hs  Extraction.hs  Graph.hs  Labeling.hs  Types.hs
src/Graphos/Domain/Community/: Label.hs
src/Graphos/Domain/Graph/: Analysis.hs  Core.hs  Diff.hs  FGL.hs  Query.hs
src/Graphos/Domain/Types/: Analysis.hs  Edge.hs  Graph.hs  Node.hs  Pipeline.hs
src/Graphos/Infrastructure/: Config.hs  Logging.hs  Security.hs
src/Graphos/Infrastructure/Export/: CommunityGraph.hs  GraphML.hs  HTML.hs  IncrementalJSON.hs  JSON.hs  Neo4j.hs  Obsidian.hs  Report.hs  SVG.hs
src/Graphos/Infrastructure/Extract/TreeSitter/: Convert.hs  Core.hs  Grammar.hs
src/Graphos/Infrastructure/FileSystem/: Cache.hs  Conversation.hs  Ignore.hs  Manifest.hs  OfficeConvert.hs  Sensitive.hs  Watcher.hs
src/Graphos/Infrastructure/Git/: Hook.hs
src/Graphos/Infrastructure/LLM/: OpenAI.hs
src/Graphos/Infrastructure/LSP/: Capabilities.hs  CapabilityParse.hs  Client.hs  Extraction.hs  Protocol.hs  ServerMap.hs  Transport.hs
src/Graphos/Infrastructure/Server/: MCP.hs  Static.hs
src/Graphos/Infrastructure/Tracking/: Cost.hs
src/Graphos/UseCase/: Analyze.hs  Benchmark.hs  Build.hs  Cluster.hs  Conversation.hs  Detect.hs  Export.hs  Extract.hs  FormatContext.hs  Infer.hs  Ingest.hs  Load.hs  Pipeline.hs  Query.hs  Report.hs  SelectContext.hs
src/Graphos/UseCase/Detect/: Paper.hs
src/Graphos/UseCase/Extract/: Haskell.hs  Markdown.hs
src/Graphos/UseCase/Query/: Normalize.hs
tests/Graphos/Domain/: AnalysisSpec.hs  CommunitySpec.hs  ContextSpec.hs  GraphSpec.hs  TypesSpec.hs
tests/Graphos/Domain/Community/: LabelSpec.hs
tests/Graphos/Infrastructure/LSP/: ClientSpec.hs  TransportSpec.hs
tests/Graphos/UseCase/: ConversationSpec.hs  ExtractSpec.hs  FormatContextSpec.hs  PipelineSpec.hs  QuerySpec.hs  SelectContextSpec.hs
